Change log for Test::Pod

1.49
    * Changed license in the README to "Same as Perl" to match the license
      listed in `META.yml`, and in the POD as of v1.42.

1.48 - 2013-05-06T04:47:00Z
    * Fixed test failure with versions of Pod::Simple lower than 3.24. Thanks
      to Martin Holste and Tatsuhiko Miyagawa for the reports.

1.47 - 2013-05-05T03:14:25Z
    * Fixed failing test on Pod::Simple 3.27 and higher.

1.46 - 2013-02-16T19:46:17Z
    * Fixed a crash when `all_pod_files_ok()` finds no files to test. Thanks
      to H.Merijn Brand.
    * Switched from custom file searching code to File::Find. Suggested by
      H.Merijn Brand.
    * Fixed failing test on Pod::Simple 3.24.

1.45 - 2011-03-09T20:00:59
    * Removed Module::Build from `build_requires`, since it does nothing
      out-of-the ordinary, and this keeps it out of the `Makefile.PL`'s
      `PM_PREREQ`. Per gripe from Peter Scott.

1.44 - 2010-04-26T17:33:02
    * Restored the `Makefile.PL` by using Module::Build::Compat's
      "traditional" configuration.

1.43 - 2010-04-21T02:33:59
    * Reduced prereq for Test::More to 0.62, prereq for Pod::Simple to 3.05,
      and added File::Spec to the list of prereqs. The prerequisites were
      needlessly high, and by reducing them Test::Pod can rely on the core
      versions of those modules in on Perl 5.8.8. Thanks to Chris Wittmer for
      the patch.

1.42 - 2010-03-10T19:41:20
    * Fixed invalid Pod link. Thanks to Markus Sonderegger.
    * Changed license in the POD to "Same as Perl" to match the license listed in
      `META.yml`.
    * Changed `Build.PL` to require Module::Build 0.30. It already does in
      `configure_requires`, but also doing so on the `use` line helps provide
      a more useful error message in older toolchain tools that don't use
      `configure_requires`.
    * Updated `MANIFEST` so that the `README` is actually included in the
      distribution.
    * Now recognizes `.bat` files as Perl files when they contain